--- a/index.html
+++ b/index.html
@@ -3,48 +3,30 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
 
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
     <title>个人简历 by xjywp2008</title>
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/xjywp2008/resume">View on GitHub</a>
-    <div class="shell">
 
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>个人简历</h1>
-            <h2>程序猿的长成</h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-      </header>
+    <header>
+      <div class="container">
+        <h1>个人简历</h1>
+        <h2>程序猿的长成</h2>
 
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/xjywp2008/resume/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/xjywp2008/resume/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
-      </section>
+        <section id="downloads">
+          <a href="https://github.com/xjywp2008/resume/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/xjywp2008/resume/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/xjywp2008/resume" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
-
-      <span class="banner-fix"></span>
-
-
+    <div class="container">
       <section id="main_content">
         <h1>
 <a id="联系方式" class="anchor" href="#%E8%81%94%E7%B3%BB%E6%96%B9%E5%BC%8F" aria-hidden="true"><span class="octicon octicon-link"></span></a>联系方式</h1>
@@ -194,19 +176,6 @@
 
 <p>感谢您花时间阅读我的简历，期待能有机会和您共事。</p>
       </section>
-
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/xjywp2008">xjywp2008</a> can be found on <a href="https://github.com/xjywp2008/resume">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
-      </footer>
-
     </div>
 
     
