Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 <ul>
 <li>徐京(Jim.Xu)/男/1990 </li>
 <li>专科/无锡职业技术学院</li>
-<li><p>工作年限：3.5年</p></li>
-<li><p>期望职位：JAVA程序员</p></li>
+<li>工作年限：3.5年</li>
+<li>期望职位：JAVA程序员</li>
 <li>期望城市：杭州</li>
 </ul>
 
@@ -64,7 +64,7 @@
 
 <ul>
 <li>开发时间：2015年7月~2015年9月</li>
-<li> 地点：安佑集团</li>
+<li>地点：安佑集团</li>
 <li>项目介绍：帮助猪场轻松实现量化管理和精细化生产的猪场管理系统，实时了解猪场动态，智能化生成工作任务单推动猪场按照计划生产。</li>
 <li>责任描述：主要负责供应链模块。前期：数据库设计，UML图的设计，概要设计的编写。开发阶段：主要负责“物资入库，精液入库，猪只入库，仓库汇总表”等模块的开发。</li>
 <li>主要技术：EXTJS5，Spring MVC，Spring，MyBatis，MySql存储过程使用。</li>
@@ -75,7 +75,7 @@
 
 <ul>
 <li>开发时间：2015年5月~2015年7月</li>
-<li> 地点：苏州安软科技有限公司</li>
+<li>地点：苏州安软科技有限公司</li>
 <li>项目介绍：由于广州旧版本的电子发票只实现对单电商的支持，不能满足目前业务需求，需升级改造成对多电商的支持。升级的项目包括：管理端，受理端，处理端，独立上传。</li>
 <li>责任描述：主要负责“管理端：独立CA服务的实现，电商证书信息页面，纳税人证书信息，税局证书下载，客户端证书信息”等功能的实现。</li>
 <li>主要技术：jQuery ligerUI，Spring MVC，Spring，MyBatis，RabbitMQ</li>
@@ -86,7 +86,7 @@
 
 <ul>
 <li>开发时间：2015年3月~2015年5月</li>
-<li> 地点：航天信息股份有限公司</li>
+<li>地点：航天信息股份有限公司</li>
 <li>项目介绍：为满足第三方系统的集成，税局开放通过HTTP连接的方式请求增值税发票的开局。由于服务端接受报文的信息与最新标准的报文存在差异，需要做个报文转换与请求转发，返回处理的操作。向第三方已jar包的形式提供接口，封装HTTP请求，报文转换处理等细节。</li>
 <li>责任描述：主要负责jar包的实现，数据合法性验证，测试，配合服务端做性能测试。</li>
 <li>主要技术： HttpClient，XStream</li>
@@ -96,8 +96,8 @@
 <a id="4-孟加拉国税务演示系统" class="anchor" href="#4-%E5%AD%9F%E5%8A%A0%E6%8B%89%E5%9B%BD%E7%A8%8E%E5%8A%A1%E6%BC%94%E7%A4%BA%E7%B3%BB%E7%BB%9F" aria-hidden="true"><span class="octicon octicon-link"></span></a>4. 孟加拉国税务演示系统</h3>
 
 <ul>
-<li> 开发时间：2014年12月~2015年3月</li>
-<li> 地点：航天信息股份有限公司</li>
+<li>开发时间：2014年12月~2015年3月</li>
+<li>地点：航天信息股份有限公司</li>
 <li>项目介绍：航天信息投标孟加拉国税务系统，根据需求书制作税务演示系统，主要包括Risk，Revenue accounting，Refund，Non-filling，Debt ，Audit，Objection等税务模块的开发。</li>
 <li>责任描述：主要负责公共组件的开发，文档管理模块，稽查模块的开发。</li>
 <li>主要技术：jQuery EasyUI，慧正工作流，Spring MVC，Spring，MyBatis</li>
@@ -107,45 +107,45 @@
 <a id="5-51电子发票大平台系统" class="anchor" href="#5-51%E7%94%B5%E5%AD%90%E5%8F%91%E7%A5%A8%E5%A4%A7%E5%B9%B3%E5%8F%B0%E7%B3%BB%E7%BB%9F" aria-hidden="true"><span class="octicon octicon-link"></span></a>5. 51电子发票大平台系统</h3>
 
 <ul>
-<li> 开发时间：2014年9月~2015年12月</li>
-<li> 地点：苏州安软科技有限公司</li>
-<li> 项目介绍：为了解决开发票难，而电子发票的推行很大程度上解决了这一问题，开发一套能够实现在线开票的电子发票管理系统。系统主要包括，管理端，受理端，处理端，独立上传。</li>
-<li> 责任描述：主要负责管理端与税局交互CA加密的实现，证书的上传下载管理，虚拟电商模块开发，电商信息管理模块，纳税人信息管理模块。</li>
-<li> 主要技术：jQuery ligerUI，Spring MVC，Spring，MyBatis，RabbitMQ</li>
+<li>开发时间：2014年9月~2015年12月</li>
+<li>地点：苏州安软科技有限公司</li>
+<li>项目介绍：为了解决开发票难，而电子发票的推行很大程度上解决了这一问题，开发一套能够实现在线开票的电子发票管理系统。系统主要包括，管理端，受理端，处理端，独立上传。</li>
+<li>责任描述：主要负责管理端与税局交互CA加密的实现，证书的上传下载管理，虚拟电商模块开发，电商信息管理模块，纳税人信息管理模块。</li>
+<li>主要技术：jQuery ligerUI，Spring MVC，Spring，MyBatis，RabbitMQ</li>
 </ul>
 
 <h3>
 <a id="6-杭州公安厅资源管理系统" class="anchor" href="#6-%E6%9D%AD%E5%B7%9E%E5%85%AC%E5%AE%89%E5%8E%85%E8%B5%84%E6%BA%90%E7%AE%A1%E7%90%86%E7%B3%BB%E7%BB%9F" aria-hidden="true"><span class="octicon octicon-link"></span></a>6. 杭州公安厅资源管理系统</h3>
 
 <ul>
-<li> 开发时间：2014年1月~2014年9月</li>
-<li> 地点：浙江公共安全研究院</li>
-<li> 项目介绍：为了解决公安厅各部门间的数据查询共享，资源申请；开发一套整合所有部门数据表结构的查询，数据接口的申请，第三方应用的接入。主要服务浙江省内公安系统内，其他系统开发对已有资源的查找与接口申请。</li>
-<li> 责任描述：主要负责系统的基础架构的搭建，权限模块的开发，PKI认证，数据资源模块的开发。</li>
-<li> 主要技术：Bootstrap，Angularjs，Shiro，Spring MVC，Spring，Spring JDBC</li>
+<li>开发时间：2014年1月~2014年9月</li>
+<li>地点：浙江公共安全研究院</li>
+<li>项目介绍：为了解决公安厅各部门间的数据查询共享，资源申请；开发一套整合所有部门数据表结构的查询，数据接口的申请，第三方应用的接入。主要服务浙江省内公安系统内，其他系统开发对已有资源的查找与接口申请。</li>
+<li>责任描述：主要负责系统的基础架构的搭建，权限模块的开发，PKI认证，数据资源模块的开发。</li>
+<li>主要技术：Bootstrap，Angularjs，Shiro，Spring MVC，Spring，Spring JDBC</li>
 </ul>
 
 <h3>
 <a id="7-太仓市社保局人才科系统开发site端mis端一期二期太仓市社保局外围系统site端mis端太仓市见实习系统site端mis端" class="anchor" href="#7-%E5%A4%AA%E4%BB%93%E5%B8%82%E7%A4%BE%E4%BF%9D%E5%B1%80%E4%BA%BA%E6%89%8D%E7%A7%91%E7%B3%BB%E7%BB%9F%E5%BC%80%E5%8F%91site%E7%AB%AFmis%E7%AB%AF%E4%B8%80%E6%9C%9F%E4%BA%8C%E6%9C%9F%E5%A4%AA%E4%BB%93%E5%B8%82%E7%A4%BE%E4%BF%9D%E5%B1%80%E5%A4%96%E5%9B%B4%E7%B3%BB%E7%BB%9Fsite%E7%AB%AFmis%E7%AB%AF%E5%A4%AA%E4%BB%93%E5%B8%82%E8%A7%81%E5%AE%9E%E4%B9%A0%E7%B3%BB%E7%BB%9Fsite%E7%AB%AFmis%E7%AB%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>7. 太仓市社保局人才科系统开发（site端，mis端）（一期，二期），太仓市社保局外围系统（site端，mis端），太仓市见实习系统（site端，mis端）</h3>
 
 <ul>
-<li> 开发时间：2013年1月~2014年1月</li>
-<li> 地点：苏州安软科技有限公司</li>
-<li> 项目介绍：太仓市社保局，主要实现对人才引进实现网上申报，审核，补贴发放，英才证的发放，企业见实习的补贴的申请，博士后流动站的管理与补贴发放，等等。</li>
-<li> 责任描述：主要负责高层次人才引进模块，博士后流动站模块的，见实习系统开发。</li>
-<li> 主要技术(mis端)：Extjs4，Spring MVC，Spring，MyBatis</li>
-<li> 主要技术(site端)：Bootstrap，Spring MVC，Spring，MyBatis</li>
+<li>开发时间：2013年1月~2014年1月</li>
+<li>地点：苏州安软科技有限公司</li>
+<li>项目介绍：太仓市社保局，主要实现对人才引进实现网上申报，审核，补贴发放，英才证的发放，企业见实习的补贴的申请，博士后流动站的管理与补贴发放，等等。</li>
+<li>责任描述：主要负责高层次人才引进模块，博士后流动站模块的，见实习系统开发。</li>
+<li>主要技术(mis端)：Extjs4，Spring MVC，Spring，MyBatis</li>
+<li>主要技术(site端)：Bootstrap，Spring MVC，Spring，MyBatis</li>
 </ul>
 
 <h3>
 <a id="8-太仓三小荣誉申报系统太仓ems管理系统苏州安软资产管理系统" class="anchor" href="#8-%E5%A4%AA%E4%BB%93%E4%B8%89%E5%B0%8F%E8%8D%A3%E8%AA%89%E7%94%B3%E6%8A%A5%E7%B3%BB%E7%BB%9F%E5%A4%AA%E4%BB%93ems%E7%AE%A1%E7%90%86%E7%B3%BB%E7%BB%9F%E8%8B%8F%E5%B7%9E%E5%AE%89%E8%BD%AF%E8%B5%84%E4%BA%A7%E7%AE%A1%E7%90%86%E7%B3%BB%E7%BB%9F" aria-hidden="true"><span class="octicon octicon-link"></span></a>8. 太仓三小荣誉申报系统，太仓EMS管理系统，苏州安软资产管理系统，</h3>
 
 <ul>
-<li> 开发时间：2012年5月~2013年1月</li>
-<li> 地点：苏州安软科技有限公司</li>
-<li> 项目介绍：太仓三小荣誉系统主要实现：班级学生获取市级以上荣誉申报与审核，班级的物品保修。太仓EMS系统主要实现：公司内部文档的管理，邮件的管理，知识库的管理。资产管理系统：主要实现公司内部资产的登记管理，申请借用与归还的管理。</li>
-<li> 责任描述：荣誉系统：独自一人开发完成。EMS：主要负责文档管理模块的实现。资产管理系统：主要负责资产登记管理，与借用模块的实现。</li>
-<li> 主要技术：Extjs4，Spring MVC，Spring，MyBatis</li>
+<li>开发时间：2012年5月~2013年1月</li>
+<li>地点：苏州安软科技有限公司</li>
+<li>项目介绍：太仓三小荣誉系统主要实现：班级学生获取市级以上荣誉申报与审核，班级的物品保修。太仓EMS系统主要实现：公司内部文档的管理，邮件的管理，知识库的管理。资产管理系统：主要实现公司内部资产的登记管理，申请借用与归还的管理。</li>
+<li>责任描述：荣誉系统：独自一人开发完成。EMS：主要负责文档管理模块的实现。资产管理系统：主要负责资产登记管理，与借用模块的实现。</li>
+<li>主要技术：Extjs4，Spring MVC，Spring，MyBatis</li>
 </ul>
 
 <hr>
