--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="container">
       <section id="main_content">
         <h1>
-<a id="联系方式" class="anchor" href="#%E8%81%94%E7%B3%BB%E6%96%B9%E5%BC%8F" aria-hidden="true"><span class="octicon octicon-link"></span></a>联系方式</h1>
+<a id="联系方式" class="anchor" href="#%E8%81%94%E7%B3%BB%E6%96%B9%E5%BC%8F" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>联系方式</h1>
 
 <ul>
 <li>手机：18962621023</li>
@@ -41,7 +41,7 @@
 <hr>
 
 <h1>
-<a id="个人信息" class="anchor" href="#%E4%B8%AA%E4%BA%BA%E4%BF%A1%E6%81%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>个人信息</h1>
+<a id="个人信息" class="anchor" href="#%E4%B8%AA%E4%BA%BA%E4%BF%A1%E6%81%AF" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>个人信息</h1>
 
 <ul>
 <li>徐京(Jim.Xu)/男/1990 </li>
@@ -54,13 +54,38 @@
 <hr>
 
 <h1>
-<a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>工作经历</h1>
+<a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>工作经历</h1>
 
 <h2>
-<a id="苏州安软信息科技有限公司--2012年5月--2015年10月-" class="anchor" href="#%E8%8B%8F%E5%B7%9E%E5%AE%89%E8%BD%AF%E4%BF%A1%E6%81%AF%E7%A7%91%E6%8A%80%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8--2012%E5%B9%B45%E6%9C%88--2015%E5%B9%B410%E6%9C%88-" aria-hidden="true"><span class="octicon octicon-link"></span></a>苏州安软信息科技有限公司 （ 2012年5月 ~ 2015年10月 ）</h2>
+<a id="药药好杭州网络科技有限公司--2015年10月--至今-" class="anchor" href="#%E8%8D%AF%E8%8D%AF%E5%A5%BD%E6%9D%AD%E5%B7%9E%E7%BD%91%E7%BB%9C%E7%A7%91%E6%8A%80%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8--2015%E5%B9%B410%E6%9C%88--%E8%87%B3%E4%BB%8A-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>药药好(杭州)网络科技有限公司 （ 2015年10月 ~ 至今 ）</h2>
 
 <h3>
-<a id="1--安佑猪事通智能养猪系统" class="anchor" href="#1--%E5%AE%89%E4%BD%91%E7%8C%AA%E4%BA%8B%E9%80%9A%E6%99%BA%E8%83%BD%E5%85%BB%E7%8C%AA%E7%B3%BB%E7%BB%9F" aria-hidden="true"><span class="octicon octicon-link"></span></a>1.  安佑猪事通智能养猪系统</h3>
+<a id="1运营支撑系统后台管理系统-促销模块的开发" class="anchor" href="#1%E8%BF%90%E8%90%A5%E6%94%AF%E6%92%91%E7%B3%BB%E7%BB%9F%E5%90%8E%E5%8F%B0%E7%AE%A1%E7%90%86%E7%B3%BB%E7%BB%9F-%E4%BF%83%E9%94%80%E6%A8%A1%E5%9D%97%E7%9A%84%E5%BC%80%E5%8F%91" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>1.运营支撑系统（后台管理系统）-促销模块的开发</h3>
+
+<ul>
+<li>开发时间：2015年10月~2016年4月</li>
+<li>地点：杭州</li>
+<li>项目介绍：提供的B2B平台的活动查询服务，为前台的B2B网站四级页、搜索、会员、订单提供活动信息查询服务</li>
+<li>责任描述：主要负责（单品特价，套餐，满减）等活动模块开发，抵用券（通用券，品牌券，品类券，单品券）模块开发</li>
+<li>主要技术：Easyui，Spring MVC，Spring，MyBatis，MySql</li>
+</ul>
+
+<h3>
+<a id="2药药好erp开发" class="anchor" href="#2%E8%8D%AF%E8%8D%AF%E5%A5%BDerp%E5%BC%80%E5%8F%91" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2.药药好ERP开发</h3>
+
+<ul>
+<li>开发时间：2016年5月~至今</li>
+<li>地点：杭州</li>
+<li>项目介绍：公司内部ERP管理系统，提供运营，采购，质管等部门日常运营服务，打通与B2B,WMS之间数据共享与传输服务</li>
+<li>责任描述：主要负责工作流模块的开发，流程模型的创建与管理，流程部署与管理，任务节点分配管理等</li>
+<li>主要技术：Bootstrap，Spring MVC，Spring，Shiro，Activiti，MyBatis，MySql</li>
+</ul>
+
+<h2>
+<a id="苏州安软信息科技有限公司--2012年5月--2015年10月-" class="anchor" href="#%E8%8B%8F%E5%B7%9E%E5%AE%89%E8%BD%AF%E4%BF%A1%E6%81%AF%E7%A7%91%E6%8A%80%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8--2012%E5%B9%B45%E6%9C%88--2015%E5%B9%B410%E6%9C%88-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>苏州安软信息科技有限公司 （ 2012年5月 ~ 2015年10月 ）</h2>
+
+<h3>
+<a id="1--安佑猪事通智能养猪系统" class="anchor" href="#1--%E5%AE%89%E4%BD%91%E7%8C%AA%E4%BA%8B%E9%80%9A%E6%99%BA%E8%83%BD%E5%85%BB%E7%8C%AA%E7%B3%BB%E7%BB%9F" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>1.  安佑猪事通智能养猪系统</h3>
 
 <ul>
 <li>开发时间：2015年7月~2015年9月</li>
@@ -71,7 +96,7 @@
 </ul>
 
 <h3>
-<a id="2-北京电子发票系统广州版本升级" class="anchor" href="#2-%E5%8C%97%E4%BA%AC%E7%94%B5%E5%AD%90%E5%8F%91%E7%A5%A8%E7%B3%BB%E7%BB%9F%E5%B9%BF%E5%B7%9E%E7%89%88%E6%9C%AC%E5%8D%87%E7%BA%A7" aria-hidden="true"><span class="octicon octicon-link"></span></a>2. 北京电子发票系统（广州版本升级）</h3>
+<a id="2-北京电子发票系统广州版本升级" class="anchor" href="#2-%E5%8C%97%E4%BA%AC%E7%94%B5%E5%AD%90%E5%8F%91%E7%A5%A8%E7%B3%BB%E7%BB%9F%E5%B9%BF%E5%B7%9E%E7%89%88%E6%9C%AC%E5%8D%87%E7%BA%A7" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2. 北京电子发票系统（广州版本升级）</h3>
 
 <ul>
 <li>开发时间：2015年5月~2015年7月</li>
@@ -82,7 +107,7 @@
 </ul>
 
 <h3>
-<a id="3-北京电子发票系统增值税发票第三方调用jar包的实现" class="anchor" href="#3-%E5%8C%97%E4%BA%AC%E7%94%B5%E5%AD%90%E5%8F%91%E7%A5%A8%E7%B3%BB%E7%BB%9F%E5%A2%9E%E5%80%BC%E7%A8%8E%E5%8F%91%E7%A5%A8%E7%AC%AC%E4%B8%89%E6%96%B9%E8%B0%83%E7%94%A8jar%E5%8C%85%E7%9A%84%E5%AE%9E%E7%8E%B0" aria-hidden="true"><span class="octicon octicon-link"></span></a>3. 北京电子发票系统（增值税发票第三方调用jar包的实现）</h3>
+<a id="3-北京电子发票系统增值税发票第三方调用jar包的实现" class="anchor" href="#3-%E5%8C%97%E4%BA%AC%E7%94%B5%E5%AD%90%E5%8F%91%E7%A5%A8%E7%B3%BB%E7%BB%9F%E5%A2%9E%E5%80%BC%E7%A8%8E%E5%8F%91%E7%A5%A8%E7%AC%AC%E4%B8%89%E6%96%B9%E8%B0%83%E7%94%A8jar%E5%8C%85%E7%9A%84%E5%AE%9E%E7%8E%B0" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>3. 北京电子发票系统（增值税发票第三方调用jar包的实现）</h3>
 
 <ul>
 <li>开发时间：2015年3月~2015年5月</li>
@@ -93,7 +118,7 @@
 </ul>
 
 <h3>
-<a id="4-孟加拉国税务演示系统" class="anchor" href="#4-%E5%AD%9F%E5%8A%A0%E6%8B%89%E5%9B%BD%E7%A8%8E%E5%8A%A1%E6%BC%94%E7%A4%BA%E7%B3%BB%E7%BB%9F" aria-hidden="true"><span class="octicon octicon-link"></span></a>4. 孟加拉国税务演示系统</h3>
+<a id="4-孟加拉国税务演示系统" class="anchor" href="#4-%E5%AD%9F%E5%8A%A0%E6%8B%89%E5%9B%BD%E7%A8%8E%E5%8A%A1%E6%BC%94%E7%A4%BA%E7%B3%BB%E7%BB%9F" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>4. 孟加拉国税务演示系统</h3>
 
 <ul>
 <li>开发时间：2014年12月~2015年3月</li>
@@ -104,7 +129,7 @@
 </ul>
 
 <h3>
-<a id="5-51电子发票大平台系统" class="anchor" href="#5-51%E7%94%B5%E5%AD%90%E5%8F%91%E7%A5%A8%E5%A4%A7%E5%B9%B3%E5%8F%B0%E7%B3%BB%E7%BB%9F" aria-hidden="true"><span class="octicon octicon-link"></span></a>5. 51电子发票大平台系统</h3>
+<a id="5-51电子发票大平台系统" class="anchor" href="#5-51%E7%94%B5%E5%AD%90%E5%8F%91%E7%A5%A8%E5%A4%A7%E5%B9%B3%E5%8F%B0%E7%B3%BB%E7%BB%9F" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>5. 51电子发票大平台系统</h3>
 
 <ul>
 <li>开发时间：2014年9月~2015年12月</li>
@@ -115,7 +140,7 @@
 </ul>
 
 <h3>
-<a id="6-杭州公安厅资源管理系统" class="anchor" href="#6-%E6%9D%AD%E5%B7%9E%E5%85%AC%E5%AE%89%E5%8E%85%E8%B5%84%E6%BA%90%E7%AE%A1%E7%90%86%E7%B3%BB%E7%BB%9F" aria-hidden="true"><span class="octicon octicon-link"></span></a>6. 杭州公安厅资源管理系统</h3>
+<a id="6-杭州公安厅资源管理系统" class="anchor" href="#6-%E6%9D%AD%E5%B7%9E%E5%85%AC%E5%AE%89%E5%8E%85%E8%B5%84%E6%BA%90%E7%AE%A1%E7%90%86%E7%B3%BB%E7%BB%9F" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>6. 杭州公安厅资源管理系统</h3>
 
 <ul>
 <li>开发时间：2014年1月~2014年9月</li>
@@ -126,7 +151,7 @@
 </ul>
 
 <h3>
-<a id="7-太仓市社保局人才科系统开发site端mis端一期二期太仓市社保局外围系统site端mis端太仓市见实习系统site端mis端" class="anchor" href="#7-%E5%A4%AA%E4%BB%93%E5%B8%82%E7%A4%BE%E4%BF%9D%E5%B1%80%E4%BA%BA%E6%89%8D%E7%A7%91%E7%B3%BB%E7%BB%9F%E5%BC%80%E5%8F%91site%E7%AB%AFmis%E7%AB%AF%E4%B8%80%E6%9C%9F%E4%BA%8C%E6%9C%9F%E5%A4%AA%E4%BB%93%E5%B8%82%E7%A4%BE%E4%BF%9D%E5%B1%80%E5%A4%96%E5%9B%B4%E7%B3%BB%E7%BB%9Fsite%E7%AB%AFmis%E7%AB%AF%E5%A4%AA%E4%BB%93%E5%B8%82%E8%A7%81%E5%AE%9E%E4%B9%A0%E7%B3%BB%E7%BB%9Fsite%E7%AB%AFmis%E7%AB%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>7. 太仓市社保局人才科系统开发（site端，mis端）（一期，二期），太仓市社保局外围系统（site端，mis端），太仓市见实习系统（site端，mis端）</h3>
+<a id="7-太仓市社保局人才科系统开发site端mis端一期二期太仓市社保局外围系统site端mis端太仓市见实习系统site端mis端" class="anchor" href="#7-%E5%A4%AA%E4%BB%93%E5%B8%82%E7%A4%BE%E4%BF%9D%E5%B1%80%E4%BA%BA%E6%89%8D%E7%A7%91%E7%B3%BB%E7%BB%9F%E5%BC%80%E5%8F%91site%E7%AB%AFmis%E7%AB%AF%E4%B8%80%E6%9C%9F%E4%BA%8C%E6%9C%9F%E5%A4%AA%E4%BB%93%E5%B8%82%E7%A4%BE%E4%BF%9D%E5%B1%80%E5%A4%96%E5%9B%B4%E7%B3%BB%E7%BB%9Fsite%E7%AB%AFmis%E7%AB%AF%E5%A4%AA%E4%BB%93%E5%B8%82%E8%A7%81%E5%AE%9E%E4%B9%A0%E7%B3%BB%E7%BB%9Fsite%E7%AB%AFmis%E7%AB%AF" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>7. 太仓市社保局人才科系统开发（site端，mis端）（一期，二期），太仓市社保局外围系统（site端，mis端），太仓市见实习系统（site端，mis端）</h3>
 
 <ul>
 <li>开发时间：2013年1月~2014年1月</li>
@@ -138,7 +163,7 @@
 </ul>
 
 <h3>
-<a id="8-太仓三小荣誉申报系统太仓ems管理系统苏州安软资产管理系统" class="anchor" href="#8-%E5%A4%AA%E4%BB%93%E4%B8%89%E5%B0%8F%E8%8D%A3%E8%AA%89%E7%94%B3%E6%8A%A5%E7%B3%BB%E7%BB%9F%E5%A4%AA%E4%BB%93ems%E7%AE%A1%E7%90%86%E7%B3%BB%E7%BB%9F%E8%8B%8F%E5%B7%9E%E5%AE%89%E8%BD%AF%E8%B5%84%E4%BA%A7%E7%AE%A1%E7%90%86%E7%B3%BB%E7%BB%9F" aria-hidden="true"><span class="octicon octicon-link"></span></a>8. 太仓三小荣誉申报系统，太仓EMS管理系统，苏州安软资产管理系统，</h3>
+<a id="8-太仓三小荣誉申报系统太仓ems管理系统苏州安软资产管理系统" class="anchor" href="#8-%E5%A4%AA%E4%BB%93%E4%B8%89%E5%B0%8F%E8%8D%A3%E8%AA%89%E7%94%B3%E6%8A%A5%E7%B3%BB%E7%BB%9F%E5%A4%AA%E4%BB%93ems%E7%AE%A1%E7%90%86%E7%B3%BB%E7%BB%9F%E8%8B%8F%E5%B7%9E%E5%AE%89%E8%BD%AF%E8%B5%84%E4%BA%A7%E7%AE%A1%E7%90%86%E7%B3%BB%E7%BB%9F" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>8. 太仓三小荣誉申报系统，太仓EMS管理系统，苏州安软资产管理系统，</h3>
 
 <ul>
 <li>开发时间：2012年5月~2013年1月</li>
@@ -151,13 +176,13 @@
 <hr>
 
 <h1>
-<a id="技能清单" class="anchor" href="#%E6%8A%80%E8%83%BD%E6%B8%85%E5%8D%95" aria-hidden="true"><span class="octicon octicon-link"></span></a>技能清单</h1>
+<a id="技能清单" class="anchor" href="#%E6%8A%80%E8%83%BD%E6%B8%85%E5%8D%95" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>技能清单</h1>
 
 <p>以下均为我熟练使用的技能</p>
 
 <ul>
 <li>前端框架：Bootstrap/AngularJS/JQuery EasyUI/jQuery ligerUI</li>
-<li>后端框架：Spring MVC/Spring/Shiro/MyBatis</li>
+<li>后端框架：Spring MVC/Spring/Shiro/MyBatis/Activiti</li>
 <li>数据库相关：MySQL/Oracle</li>
 <li>版本管理、文档和自动化部署工具：Svn/Git/Maven</li>
 <li>单元测试：JUnit/Spring Test</li>
@@ -166,13 +191,13 @@
 <hr>
 
 <h1>
-<a id="客户感谢信" class="anchor" href="#%E5%AE%A2%E6%88%B7%E6%84%9F%E8%B0%A2%E4%BF%A1" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="http://www.safesoftinc.cn/goodemployees.html">客户感谢信</a>
+<a id="客户感谢信" class="anchor" href="#%E5%AE%A2%E6%88%B7%E6%84%9F%E8%B0%A2%E4%BF%A1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://www.safesoftinc.cn/goodemployees.html">客户感谢信</a>
 </h1>
 
 <hr>
 
 <h1>
-<a id="致谢" class="anchor" href="#%E8%87%B4%E8%B0%A2" aria-hidden="true"><span class="octicon octicon-link"></span></a>致谢</h1>
+<a id="致谢" class="anchor" href="#%E8%87%B4%E8%B0%A2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>致谢</h1>
 
 <p>感谢您花时间阅读我的简历，期待能有机会和您共事。</p>
       </section>
