Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -194,7 +194,9 @@
 <a id="客户感谢信" class="anchor" href="#%E5%AE%A2%E6%88%B7%E6%84%9F%E8%B0%A2%E4%BF%A1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://www.safesoftinc.cn/goodemployees.html">客户感谢信</a>
 </h1>
 
-<hr>
+<h2>
+<a id="" class="anchor" href="#" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><img src="https://raw.githubusercontent.com/xjywp2008/resume/gh-pages/images/jim.png" alt="客户感谢信截图">
+</h2>
 
 <h1>
 <a id="致谢" class="anchor" href="#%E8%87%B4%E8%B0%A2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>致谢</h1>
