Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </ul>
 
 <h3>
-<a id="2药药好erp开发" class="anchor" href="#2%E8%8D%AF%E8%8D%AF%E5%A5%BDerp%E5%BC%80%E5%8F%91" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2.药药好ERP开发</h3>
+<a id="2药药好erp系统" class="anchor" href="#2%E8%8D%AF%E8%8D%AF%E5%A5%BDerp%E7%B3%BB%E7%BB%9F" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2.药药好ERP系统</h3>
 
 <ul>
 <li>开发时间：2016年5月~至今</li>
